force-app/main/default/objects/DM_Primary_Objects_Validation__c/DM_Primary_Objects_Validation__c.object-meta.xml
<CustomObject>
    <label>DM Primary Objects Validation</label>
    <nameField>
        <label>DM Primary Objects Validation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Primary Objects Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>