force-app/main/default/objects/DM_Primary_Objects_Validation__c/fields/CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>DM Primary Objects Validations</relationshipLabel>
    <relationshipName>DM_Primary_Objects_Validations</relationshipName>
    <type>Lookup</type>
</CustomField>