force-app/main/default/objects/DM_Primary_Objects_Validation__c/fields/DM_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>DM_Validation_Error__c</fullName>
    <label>DM Validation Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>