force-app/main/default/objects/DM_Primary_Objects_Validation__c/fields/DM_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Validation_Status__c</fullName>
    <label>DM Validation Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>